Hiding certain fields in the modal, removing default given and surname from person content type

--- a/modules/custom/genealogy/gen_person/css/gen_person.css
+++ b/modules/custom/genealogy/gen_person/css/gen_person.css
@@ -33,3 +33,8 @@ i.fa-circle-thin {
 .gender-nickname {
   clear: both;
 }
+
+#modalContent .vertical-tabs,
+#modalContent .node-form-revision-information {
+  display: none;
+}
