Adding html5 placeholder capabilities for field labels, changing person content type to accommodate person placeholders, adding some basic css formatting

--- a/modules/custom/genealogy/gen_person/css/gen_person.css
+++ b/modules/custom/genealogy/gen_person/css/gen_person.css
@@ -34,6 +34,10 @@ i.fa-circle-thin {
   clear: both;
 }
 
+.field-name-field-person-gender .control-label {
+  display: none;
+}
+
 #modalContent .vertical-tabs,
 #modalContent .node-form-revision-information {
   display: none;
