Spacing out fields on smaller screens

--- a/modules/custom/genealogy/gen_person/css/gen_person.css
+++ b/modules/custom/genealogy/gen_person/css/gen_person.css
@@ -42,3 +42,10 @@ i.fa-circle-thin {
 #modalContent .node-form-revision-information {
   display: none;
 }
+
+@media (max-width: 991px) {
+  .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4,
+  .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8 {
+    padding-bottom: 1em;
+  }
+}
