Fixing the buttons on the node add and edit forms for the person content type

--- a/modules/custom/genealogy/gen_person/css/gen_person.css
+++ b/modules/custom/genealogy/gen_person/css/gen_person.css
@@ -43,6 +43,10 @@ i.fa-circle-thin {
   display: none;
 }
 
+.node-form .btn {
+  float: right;
+}
+
 @media (max-width: 991px) {
   .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4,
   .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8 {
