--- a/modules/custom/genealogy/gen_person/css/gen_person.css
+++ b/modules/custom/genealogy/gen_person/css/gen_person.css
@@ -47,9 +47,40 @@ i.fa-circle-thin {
   float: right;
 }
 
+article.node-person {
+  border: 3px solid #ddd;
+  padding: 0.25em;
+  border-radius: 10px 10px 10px 10px;
+  -moz-border-radius: 10px 10px 10px 10px;
+  -webkit-border-radius: 10px 10px 10px 10px;
+}
+
+.person-view {
+  float: left;
+}
+
+.person-view-buttons {
+  width: 15%;
+  float: right;
+}
+.person-view-buttons .btn {
+  width: 100%;
+}
+
 @media (max-width: 991px) {
   .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4,
   .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8 {
     padding-bottom: 1em;
   }
+  .person-view-buttons {
+    width: 100%;
+    float: left;
+  }
+  .person-view-buttons .btn {
+    width: auto;
+  }
+  .person-view-buttons div {
+    display: inline;
+  }
+
 }
